[package]
name = "asyncgraphqltest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0.16"
async-graphql-warp = "4.0.16"
warp = "0.3"
http = "0.2"
tokio = { version = "1.0.2", features = ["full"] }